tests/baselines/reference/generatorTypeCheck6.errors.txt
generatorTypeCheck6.ts(1,17): error TS2322: Type 'Generator<any, any, unknown>' is not assignable to type 'number'.


==== generatorTypeCheck6.ts (1 errors) ====
    function* g1(): number { }
                    ~~~~~~
!!! error TS2322: Type 'Generator<any, any, unknown>' is not assignable to type 'number'.